<resources>
    <string name="app_name">TR-808 Drum Pad Beat maker</string>
    <string name="textView">1</string>
    <string name="textView2">2</string>
    <string name="textView3">3</string>
    <string name="textView4">4</string>
    <string name="textView5">5</string>
    <string name="textView6">6</string>
    <string name="textView7">7</string>
    <string name="textView8">8</string>
    <string name="textView9">9</string>
    <string name="textView10">10</string>
    <string name="textView11">11</string>
    <string name="textView12">12</string>
    <string name="textView13">13</string>
    <string name="textView14">14</string>
    <string name="textView15">15</string>
    <string name="textView16a">16</string>
    <string name="play">Play/Stop</string>
    <string name="end">EXIT</string>
    <string name="menu10">Metronome&amp;Samples</string>
    <string name="menu">Setup</string>

    <string name="error">This audio file cannot be specified.</string>

    <string name="onRequestPermissionsResult1">Permissions is granted. Press it again.</string>
    <string name="onRequestPermissionsResult2">Permissions is denied.</string>

    <string name="READ_REQUEST_CODE2">cannot specify audio files outside of the Music folder.</string>

    <string name="menu5">Watch video ads &amp; hide banner ads</string>
    <string name="menu5a">Do you want to hide banner ads \nby watching video ads?</string>
    <string name="menu5b">(It can be hidden until the next time \nit is started.)</string>
    <string name="menu5c">Video ads have been viewed.</string>
    <string name="menu6">Do you want to exit?</string>

    <string name="back">back</string>

    <string name="change"><b>Touch the pad to change the pad sound.</b></string>
    <string name="change2"><b>Play Mode</b></string>

    <string name="reset1">Reset the sound settings</string>
    <string name="reset2">Reset drum pads</string>

    <string name="textView16o">VOLUME</string>
    <string name="textView17o">PITCH</string>
    <string name="textView16">V\nO\nL\nU\nM\nE</string>
    <string name="textView17">P\nI\nT\nC\nH</string>
    <string name="textView18">R\nS\nT</string>
    <string name="textView18o">RESET</string>
    <string name="textView19">A\nC</string>
    <string name="textView19o">ACCENT</string>
    <string name="textView20o">RANDOM</string>

    <string name="empty">empty</string>
    <string name="Saved">Saving… Please wait.</string>
    <string name="Loaded">Loading… Please wait.</string>
    <string name="Finish">Finished! Please wait…</string>
    <string name="lock">Locked</string>
    <string name="bpm">BPM :</string>
    <string name="editbpm">110</string>
    <string name="elsebpm">Please specify in the range of 30 to 240.</string>
    <string name="a">ACCENT</string>
    <string name="r">RESET</string>
    <string name="pitchRandom">RANDOM\nPITCH</string>
    <string name="soundRandom">RANDOM\nSOUND</string>
    <string name="sequenceRandom">RANDOM\nSEQUENCE</string>
    <string name="line">5</string>
    <string name="measure">1</string>
    <string name="measureMax">1</string>
    <string name="tracks">TRACKS</string>
    <string name="pattern">PATTERN</string>
    <string name="patternSize">PATTERN SIZE</string>
    <string name="landScape">Switching can be done in landscape mode.</string>
    <string name="title">title</string>
    <string name="save">Choose where to Save</string>
    <string name="load">Choose where to Load</string>
    <string name="save1">SAVE1</string>
    <string name="save2">SAVE2</string>
    <string name="save3">SAVE3</string>
    <string name="save4">SAVE4</string>
    <string name="save5">SAVE5</string>
    <string name="save6">SAVE6</string>
    <string name="save7">SAVE7</string>
    <string name="save8">SAVE8</string>
    <string name="maxscore">maxscore</string>
    <string name="score">score</string>
    <string name="missscore">missscore</string>
    <string name="result">result</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="clearCount">This feature becomes available after completing 12 of the 16 stages with a rating of Good or better.</string>
    <string name="savexml">SAVE</string>
    <string name="loadxml">LOAD</string>


    <string-array name="spinnerItems">
        <item>BASS DRUM [BD]</item>
        <item>HAND CLAP [CP]</item>
        <item>CLAVES [CL]</item>
        <item>CLSD HI HAT [CH]</item>
        <item>CONGA [HC-MC-LC]</item>
        <item>COWBELL [CB]</item>
        <item>CYMBAL [CY]</item>
        <item>MARACAS [MA]</item>
        <item>OPEN HI HAT [OH]</item>
        <item>RIMSHOT [RS]</item>
        <item>SNARE DRUM [SD]</item>
        <item>TOM [LT-MT-HT]</item>
        <item>Internal sounds</item>
        <item>External sounds</item>
    </string-array>

    <string-array name="spinnerItems2">
        <item>DRUM PAD MODE</item>
        <item>DRUM PAD + SEQUENCER MODE</item>
        <item>DRUM PAD CHALLENGE MODE</item>
    </string-array>


</resources>