<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/slot1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save1" />

    <Button
        android:id="@+id/slot2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save2" />

    <Button
        android:id="@+id/slot3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save3" />

    <Button
        android:id="@+id/slot4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save4" />

    <Button
        android:id="@+id/slot5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save5" />
</LinearLayout>