<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription">

    <Button
        android:id="@+id/number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/number2"
        android:text="@string/textView"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/number2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/number3"
        android:text="@string/textView2"
        app:layout_constraintStart_toEndOf="@+id/number" />

    <Button
        android:id="@+id/number3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/number4"

        android:text="@string/textView3"
        app:layout_constraintStart_toEndOf="@+id/number2" />

    <Button
        android:id="@+id/number4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/number5"

        android:text="@string/textView4"
        app:layout_constraintStart_toEndOf="@+id/number3" />

    <Button
        android:id="@+id/number5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/number6"

        android:text="@string/textView5"
        app:layout_constraintStart_toEndOf="@+id/number4" />

    <Button
        android:id="@+id/number6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/number7"

        android:text="@string/textView6"
        app:layout_constraintStart_toEndOf="@+id/number5" />

    <Button
        android:id="@+id/number7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/number8"

        android:text="@string/textView7"
        app:layout_constraintStart_toEndOf="@+id/number6" />

    <Button
        android:id="@+id/number8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/number9"

        android:text="@string/textView8"
        app:layout_constraintStart_toEndOf="@+id/number7" />

    <Button
        android:id="@+id/number9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/number10"

        android:text="@string/textView9"
        app:layout_constraintStart_toEndOf="@+id/number8" />

    <Button
        android:id="@+id/number10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/number11"

        android:text="@string/textView10"
        app:layout_constraintStart_toEndOf="@+id/number9" />

    <Button
        android:id="@+id/number11"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/number12"

        android:text="@string/textView11"
        app:layout_constraintStart_toEndOf="@+id/number10" />

    <Button
        android:id="@+id/number12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/number13"

        android:text="@string/textView12"
        app:layout_constraintStart_toEndOf="@+id/number11" />

    <Button
        android:id="@+id/number13"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/number14"

        android:text="@string/textView13"
        app:layout_constraintStart_toEndOf="@+id/number12" />

    <Button
        android:id="@+id/number14"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/number15"

        android:text="@string/textView14"
        app:layout_constraintStart_toEndOf="@+id/number13" />

    <Button
        android:id="@+id/number15"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/number16"

        android:text="@string/textView15"
        app:layout_constraintStart_toEndOf="@+id/number14" />

    <Button
        android:id="@+id/number16"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:text="@string/textView16a"
        app:layout_constraintStart_toEndOf="@+id/number15" />

</androidx.constraintlayout.widget.ConstraintLayout>