<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/result_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="#5A5A66"
    android:cacheColorHint="#FFFFFF"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

    <TextView
        android:id="@+id/maxscore"
        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/maxscore"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="4dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/score"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/missscore"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="4dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/missscore"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="4dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/result"
        android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>