<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5A5A66"
    android:foreground="@drawable/grid_sequence">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMinTextSize="1dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:maxLines="1"
        android:padding="2dp"
        android:text="@string/pattern"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/pattern_up"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMinTextSize="1dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:maxLines="2"
        android:padding="2dp"
        android:text="@string/patternSize"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/patternSize_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMinTextSize="1dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/tracks"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/track_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pattern_down"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/track_up"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackground"
        android:backgroundTint="#e2e3e3"
        android:clickable="true"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/track_count"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/ic_baseline_arrow_right_24"
        tools:ignore="ContentDescription,MissingConstraints,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/track_down"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackground"
        android:backgroundTint="#e2e3e3"
        android:clickable="true"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/track_count"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/ic_baseline_arrow_left_24"
        tools:ignore="ContentDescription,MissingConstraints,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/track_count"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMinTextSize="1dp"
        android:autoSizeTextType="uniform"
        android:background="#5A5A66"
        android:gravity="center"
        android:maxLines="1"
        android:paddingStart="2dp"
        android:text="@string/line"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/track_up"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/track_down"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <ImageView
        android:id="@+id/patternSize_up"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackground"
        android:backgroundTint="#e2e3e3"
        android:clickable="true"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/measure_max"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pattern_up"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/ic_baseline_arrow_drop_up_24"
        tools:ignore="ContentDescription,MissingConstraints,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/measure_max"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMinTextSize="1dp"
        android:autoSizeTextType="uniform"
        android:background="#5A5A66"
        android:gravity="center"
        android:maxLength="3"
        android:maxLines="1"
        android:text="@string/measureMax"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/patternSize_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/measure"
        app:layout_constraintTop_toBottomOf="@+id/patternSize_up"
        tools:ignore="Autofill,LabelFor,MissingConstraints" />

    <TextView
        android:id="@+id/measure"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMinTextSize="1dp"
        android:autoSizeTextType="uniform"
        android:background="#5A5A66"
        android:gravity="center"
        android:maxLength="3"
        android:maxLines="1"
        android:text="@string/measure"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/pattern_down"
        app:layout_constraintEnd_toStartOf="@+id/measure_max"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pattern_up"
        tools:ignore="Autofill,LabelFor,MissingConstraints" />

    <ImageView
        android:id="@+id/pattern_up"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackground"
        android:backgroundTint="#e2e3e3"
        android:clickable="true"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/measure"
        app:layout_constraintEnd_toStartOf="@+id/patternSize_up"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/ic_baseline_arrow_drop_up_24"
        tools:ignore="ContentDescription,MissingConstraints,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/pattern_down"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackground"
        android:backgroundTint="#e2e3e3"
        android:clickable="true"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/patternSize_down"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/measure"
        app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24"
        tools:ignore="ContentDescription,MissingConstraints,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/patternSize_down"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackground"
        android:backgroundTint="#e2e3e3"
        android:clickable="true"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pattern_down"
        app:layout_constraintTop_toBottomOf="@+id/measure_max"
        app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24"
        tools:ignore="ContentDescription,MissingConstraints,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/textView4"
        android:foreground="@drawable/grid_sequence">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toStartOf="@id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textView4"
        app:layout_constraintTop_toTopOf="parent"
        android:foreground="@drawable/grid_sequence">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/textView3"
        app:layout_constraintBottom_toTopOf="@id/textView4"
        app:layout_constraintTop_toTopOf="parent"
        android:foreground="@drawable/grid_sequence">

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>